// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSX render dark mode 1`] = `
<View
  className="bg-black hover:bg-white dark:bg-red"
  testID="native-twin-element"
>
  <Text
    className="text(white lg)"
  >
    Sample Text
  </Text>
</View>
`;

exports[`JSX render normal component 1`] = `
<View
  className="bg-black hover:bg-white"
  mappings={
    {
      "className": "style",
    }
  }
  testID="native-twin-element"
>
  <Text
    className="text(white lg)"
  >
    Sample Text
  </Text>
</View>
`;
